Show no results

--- a/index.html
+++ b/index.html
@@ -333,6 +333,7 @@ function loglevel(el, replace)
                            </div>
                         </div>
                      </div>
+                     <p class="uk-padding-small" id="nosearchresults" hidden>No results...</p>
                      <ul uk-accordion="multiple: true">
                         <li id="searchpagesresultscontainer" hidden class="uk-open">
                            <a class="uk-accordion-title" href="#">Pages -
