Small styling tweaks to loading

--- a/index.html
+++ b/index.html
@@ -658,12 +658,12 @@ function loglevel(el, replace)
             <time data-time=".textContent" class="uk-flex-none uk-text-meta"></time>
             <a class="uk-flex-none notext" data-spa data-userlink="href"><img data-avatar="src" width=25></a>
          </div>
-         <div data-history class="uk-inline uk-display-block">
-            <h3>Activity:</h3>
+         <div data-history class="uk-display-block">
+            <h4>Activity:</h4>
             <div class="uk-cover historyloading" uk-spinner="ratio: 2"></div>
             <div class="historycontainer" uk-overflow-auto>
             </div>
-            <div data-loadolder class="uk-position-bottom-right uk-margin-small-right" hidden>
+            <div data-loadolder class="uk-flex uk-flex-right" hidden>
                <div data-loading uk-spinner="ratio: 0.5" hidden></div>
                <a href="#" data-loadmore class="uk-text-meta">Load older</a>
             </div>
