--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
       <script src="uikit-3.5.5/js/uikit.min.js"></script>
       <script src="uikit-3.5.5/js/uikit-icons.min.js"></script>
       <!-- LOC:SCRIPT -->
-      <script src="libbo.js?v=1600442358"></script>
-      <script src="dom.js?v=1600442358"></script>
-      <script src="api.js?v=1600442358"></script>
-      <script src="index.js?v=1600442358"></script>
-      <script src="sbs2-markup/highlight.js?v=1600442358"></script>
-      <script src="sbs2-markup/parse.js?v=1600442358"></script>
-      <script src="sbs2-markup/render.js?v=1600442358"></script>
+      <script src="libbo.js?v=1600452833"></script>
+      <script src="dom.js?v=1600452833"></script>
+      <script src="api.js?v=1600452833"></script>
+      <script src="index.js?v=1600452833"></script>
+      <script src="sbs2-markup/highlight.js?v=1600452833"></script>
+      <script src="sbs2-markup/parse.js?v=1600452833"></script>
+      <script src="sbs2-markup/render.js?v=1600452833"></script>
       <!-- LOC:STYLE -->
-      <link rel="stylesheet" href="index.css?v=1600442358" />
+      <link rel="stylesheet" href="index.css?v=1600452833" />
       <script>
 //Scripts for templates/THIS file etc
 function loglevel(el, replace)
@@ -266,8 +266,10 @@ function loglevel(el, replace)
                               <a class="uk-display-block" uk-toggle="#developerlocaloptions">
                                  Developer Options</a>
                               <div id="developerlocaloptions" hidden></div>
-                              <button id="allowNotifications" 
-                                    class="uk-button uk-button-default">Permit Notifications</button>
+                              <button id="restoredefaultsettings" 
+                                 class="uk-button uk-button-default">Restore Defaults</button>
+                              <!--<button id="allowNotifications" 
+                                 class="uk-button uk-button-default">Permit Notifications</button>-->
                            </div>
                            <button id="userlogout" class="uk-button uk-button-default">Logout</button>
                         </div>
