Small fix for bad link formatting

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
       <script src="uikit-3.5.5/js/uikit.min.js"></script>
       <script src="uikit-3.5.5/js/uikit-icons.min.js"></script>
       <!-- LOC:SCRIPT -->
-      <script src="libbo.js?v=1600464073"></script>
-      <script src="dom.js?v=1600464073"></script>
-      <script src="api.js?v=1600464073"></script>
-      <script src="index.js?v=1600464073"></script>
-      <script src="sbs2-markup/highlight.js?v=1600464073"></script>
-      <script src="sbs2-markup/parse.js?v=1600464073"></script>
-      <script src="sbs2-markup/render.js?v=1600464073"></script>
+      <script src="libbo.js?v=1600489770"></script>
+      <script src="dom.js?v=1600489770"></script>
+      <script src="api.js?v=1600489770"></script>
+      <script src="index.js?v=1600489770"></script>
+      <script src="sbs2-markup/highlight.js?v=1600489770"></script>
+      <script src="sbs2-markup/parse.js?v=1600489770"></script>
+      <script src="sbs2-markup/render.js?v=1600489770"></script>
       <!-- LOC:STYLE -->
-      <link rel="stylesheet" href="index.css?v=1600464073" />
+      <link rel="stylesheet" href="index.css?v=1600489770" />
       <script>
 //Scripts for templates/THIS file etc
 function loglevel(el, replace)
@@ -623,8 +623,7 @@ function loglevel(el, replace)
          <li data-breadcrumb>
             <a data-link="href" data-spa data-text=".textContent"></a>
          </li>
-         <a data-sbslink data-link="href" data-spa>
-         </a>
+         <a data-sbslink data-link="href" data-spa></a>
          <div data-booloption>
             <label> <!-- data-name="uk-tooltip"> -->
                <input data-input=".checked" type="checkbox" class="uk-checkbox uk-margin-right">
