Little bit of cleanup, searching etc

--- a/index.html
+++ b/index.html
@@ -340,28 +340,28 @@ function loglevel(el, replace)
                         <li id="searchpagesresultscontainer" hidden class="uk-open">
                            <a class="uk-accordion-title" href="#">Pages -
                               <span data-count=".textContent"></span></a>
-                           <div id="searchpagesresults" class="uk-accordion-content">
+                           <div data-results id="searchpagesresults" class="uk-accordion-content">
                               pages
                            </div>
                         </li>
                         <li id="searchusersresultscontainer" hidden class="uk-open">
                            <a class="uk-accordion-title" href="#">Users -
                               <span data-count=".textContent"></span></a>
-                           <div id="searchusersresults" class="uk-accordion-content">
+                           <div data-results id="searchusersresults" class="uk-accordion-content">
                               users
                            </div>
                         </li>
                         <li id="searchcategoriesresultscontainer" hidden class="uk-open">
                            <a class="uk-accordion-title" href="#">Categories -
                               <span data-count=".textContent"></span></a>
-                           <div id="searchcategoriesresults" class="uk-accordion-content">
+                           <div data-results id="searchcategoriesresults" class="uk-accordion-content">
                               categories
                            </div>
                         </li>
                         <li id="searchchatresultscontainer" hidden class="uk-open">
                            <a class="uk-accordion-title" href="#">Chat -
                               <span data-count=".textContent"></span></a>
-                           <div id="searchchatresults" class="uk-accordion-content">
+                           <div data-results id="searchchatresults" class="uk-accordion-content">
                               chat
                            </div>
                         </li>
