--- a/index.html
+++ b/index.html
@@ -64,6 +64,14 @@ function showdrop(el, show)
       setTimeout(() => UIkit.drop(dd).hide(0), 300);
    }
 }
+function retext(el, attr)
+{
+   [...el.childNodes].forEach(x =>
+   {
+      if(x.getAttribute)
+         x.textContent = x.getAttribute(attr);
+   });
+}
       </script>
    </head>
    <!-- LOC:BODY -->
@@ -713,6 +721,13 @@ function showdrop(el, show)
             <span data-name=".textContent" class="uk-width-expand uk-margin-small-left 
                uk-margin-small-right"></span>
          </a>
+         <select data-treeselector class="uk-select" onblur="retext(this, 'data-path')"
+            onfocus="retext(this, 'data-tree')" onchange="this.blur()"> <!-- uk-width-small">-->
+            <!--<select class="uk-select uk-width-small uk-form-small" id="searchsortoption">-->
+         </select>
+         <div data-categoryselect data-value="data-v">
+            <div data-loading uk-spinner></div>
+         </div>
          <!-- LOC:ROUTES -->
          <div data-routehome class="uk-container uk-margin-top uk-margin-bottom">
             <h1>SmileBASIC Source</h1>
@@ -722,8 +737,9 @@ function showdrop(el, show)
             but we're gonna keep adding stuff until it's good!</p>
             <h3><a href="?p=category-0" data-spa>Browse</a></h3>
             <div class="" data-homehistory></div>
-            <a href="#" uk-toggle="#hometestarea" >Test area</a>
-            <div id="hometestarea" hidden>
+            <a href="#" uk-toggle="[data-testarea]">Test area</a>
+            <div data-testarea hidden>
+               <div data-tmpl="categoryselect" data-tmpld='{"data-value":503}'></div>
                <!--<div data-tmpl="minisearch" data-tmpld='{"data-placeholder":"search or whatever"}'></div>-->
       <button onclick="notifySuccess('Oh wow, look at that!')">Notify suc</button>
       <button onclick="notifySuccess('Oh wow, look at that! This is a message that will absolutely overflow')">Notify suc big</button>
