--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
       <script src="uikit-3.5.5/js/uikit.min.js"></script>
       <script src="uikit-3.5.5/js/uikit-icons.min.js"></script>
       <!-- LOC:SCRIPT -->
-      <script src="libbo.js?v=1601306226"></script>
-      <script src="dom.js?v=1601306226"></script>
-      <script src="api.js?v=1601306226"></script>
-      <script src="index.js?v=1601306226"></script>
-      <script src="sbs2-markup/highlight.js?v=1601306226"></script>
-      <script src="sbs2-markup/parse.js?v=1601306226"></script>
-      <script src="sbs2-markup/render.js?v=1601306226"></script>
+      <script src="libbo.js?v=1601306327"></script>
+      <script src="dom.js?v=1601306327"></script>
+      <script src="api.js?v=1601306327"></script>
+      <script src="index.js?v=1601306327"></script>
+      <script src="sbs2-markup/highlight.js?v=1601306327"></script>
+      <script src="sbs2-markup/parse.js?v=1601306327"></script>
+      <script src="sbs2-markup/render.js?v=1601306327"></script>
       <!-- LOC:STYLE -->
-      <link rel="stylesheet" href="index.css?v=1601306226" />
+      <link rel="stylesheet" href="index.css?v=1601306327" />
       <script>
 //Scripts for templates/THIS file etc
 function loglevel(el, replace)
@@ -732,7 +732,7 @@ function retext(el, attr)
          <div data-youtube>
             <div class="uk-flex uk-flex-middle">
                <a data-link="href" data-title=".textContent" class="uk-flex-none uk-text-truncate
-                  uk-margin-small-right"></a>
+                  uk-margin-small-right" target="_blank"></a>
                <a href="#" data-showplayer uk-icon="youtube"></a>
                <a href="#" data-hideplayer uk-icon="close" hidden></a>
             </div>
